# crm-api-drf

./: .gitignore  README.md  pyproject.toml
scripts/: run.sh
