[tool.poetry]
name = "crm-api-drf"
version = "0.1.0"
description = ""
authors = ["Danilo Costa <danilo.barbosa@fapce.edu.br>"]

[tool.poetry.dependencies]
python = "^3.9"
asgiref = "3.2.10"
astroid = "2.4.2"
Django = "3.0.8"
djangorestframework = "3.11.0"
isort = "4.3.21"
lazy-object-proxy = "1.4.3"
mccabe = "0.6.1"
pylint = "2.5.3"
pytz = "2020.1"
six = "1.15.0"
sqlparse = "0.3.1"
toml = "0.10.1"
typed-ast = "1.4.1"
wrapt = "1.12.1"
black = "^21.6b0"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
mypy = "^0.910"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
